infrastructure/configs/the-intersect/emqx/lb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx-mqtt
  namespace: emqx
  labels:
    app: emqx
    service: emqx-mqtt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: emqx
  ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: mqtts
      port: 8883
      protocol: TCP
      targetPort: 8883
