infrastructure/configs/the-intersect/emqx/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard-httproute
  namespace: emqx
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_GRANITE_KEYSTONE}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: emqx
          port: 18083
